css/style.css
body {
  font-family: 'Montserrat', sans-serif;
}

/* NAVIGATION BAR */

.navbar-brand {
  padding: 0;
  margin: 0;
}
.nav-link {
  font-weight: 700;
  color: grey;
  opacity: 0.8;
  transition: 0.3s;
  padding: 0, 5px;
}

.navbar-text {
  padding-left: 50px;
  font-size: .9rem;
  color: black;
  o
}

.nav-link:hover {
  opacity: 1;
  color: black;
}

.owl-carousel {
  margin-top: 79px;
}

.owl-dots {
  height: 0px;
}

/* BODY SECTIONS */
.about {
  background: #ffffff;;
  text-align: center;
}

.about h1, h3 {
  text-align: center;
  padding-bottom: 0.5rem;
}

.fleet {
  background-image: url("../img/keith.jpg");
  background-attachment: fixed;
  background-color: #ffffff;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.fleet-text {
  text-align: center;
  color: #ffffff;
}

.transbox{
  padding: 1.5rem;
  background: rgba(0,0,0,0.5);
}

.fleet img {
  display: block;
  overflow: auto;
  width: 100%;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

/* GALERY */
.galery {
  background: #ffffff;
  text-align: center;
}

.gallery-block {
  padding-bottom: 60px;
  padding-top: 60px;
}

.gallery-block .heading {
  margin-bottom: 50px;
  text-align: center;
}

.gallery-block .heading h2 {
  font-weight: bold;
  font-size: 1.4rem;
  text-transform: uppercase;
}

.gallery-block.compact-gallery .item {
  overflow: hidden;
  margin-bottom: 0;
  background: black;
  opacity: 1;
  box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.gallery-block.compact-gallery .item .image {
  transition: 0.8s ease;
}

.gallery-block.compact-gallery .item .info {
  position: relative;
  display: inline-block;
}

.gallery-block.compact-gallery .item .description {
  display: grid;
  position: absolute;
  bottom: 0;
  left: 0;
  color: #fff;
  padding: 10px;
  font-size: 17px;
  line-height: 18px;
  width: 100%;
  padding-top: 15px;
  padding-bottom: 15px;
  opacity: 1;
  color: #fff;
  transition: 0.8s ease;
  text-align: center;
  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
  background: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.39));
}

.gallery-block.compact-gallery .item .description .description-heading {
  font-size: 1em;
  font-weight: bold;
}

.gallery-block.compact-gallery .item .description .description-body {
  font-size: 0.8em;
  margin-top: 10px;
  font-weight: 300;
}

#contactSection img {
  width: 100%;
}

#footer {
  background-color: #11213d;
  color: #ffffff;
}

#footer a {
  color: #ffffff;
  transition: 0.3s;
}

#footer a:hover {
  color: #878787;
  text-decoration: none;
}

.deep-purple {
  border: 0;
  height: 1px;
  background-image: linear-gradient(to right, #00000000, #740ba8, #00000000);
}

.hidden {
  visibility: hidden;
}

@media (min-width: 576px) {
  .gallery-block.compact-gallery .item .description {
    opacity: 0;
  }

  .gallery-block.compact-gallery .item a:hover .description {
    opacity: 1;
  }

  .gallery-block .zoom-on-hover:hover .image {
    transform: scale(1.3);
    opacity: 0.7;
  }
}

@media only screen and (max-width: 360px) {
  #navlogo {
    width: 100%;
  }

  .navbar-brand {
    width: 75%;
  }
}

@media only screen and (max-width: 1230px) {
  .navbar-text {
    display: none;
  }
}

@media only screen and (max-width: 992px) {
  .fleet img {
    padding-bottom: 2rem;
  }
}

